# pokeprof-notebook

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
config/: domain_config.yaml
config/prompts/: judge_system.txt  player_system.txt  professor_system.txt
docs/deploy/: cloud-run.md
frontend/: .env.example  package-lock.json  package.json
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  auth.store.svelte.ts  auth.ts  firebase.ts  stores.svelte.ts  types.ts
frontend/src/lib/components/: AnswerCard.svelte  AppShell.svelte  BottomTabs.svelte  Breadcrumb.svelte  TreeNode.svelte  (+10 more)
frontend/src/routes/: +layout.svelte  +page.svelte
infra/: README.md
infra/environments/dev/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
infra/environments/prod/: main.tf  variables.tf  versions.tf
infra/modules/cloudrun_app/: main.tf  outputs.tf  variables.tf
src/pokeprof_notebook/: __init__.py  auth.py  cli.py  compendium.py  config.py  indexer.py  overlay.py  retriever.py  router.py  server.py  synthesizer.py  tcgdex.py  types.py
src/pokeprof_notebook/parsers/: __init__.py  compendium.py  html.py  pdf.py  tcgdex.py
src/pokeprof_notebook/static/: app.js  index.html  style.css
tests/: conftest.py  test_cli.py  test_compendium_client.py  test_config.py  test_indexer.py  test_overlay.py  test_retriever.py  test_router.py  test_server_browse.py  test_synthesizer.py  test_tcgdex_client.py  test_types.py
tests/eval/: eval_set.json  run_eval.py
tests/parsers/: test_compendium.py  test_html.py  test_pdf.py  test_tcgdex.py
(+5 files in other folders)
