[project]
name = "pokeprof-notebook"
version = "0.1.0"
description = "Pokemon TCG rule companion powered by tree-indexed retrieval"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "tiktoken>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pokeprof_notebook"]
