[project]
name = "pokeprof-notebook"
version = "0.1.0"
description = "Pokemon TCG rule companion powered by tree-indexed retrieval"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42",
    "pymupdf4llm>=0.0.17",
    "pdfplumber>=0.11",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "tiktoken>=0.5",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "sse-starlette>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "firebase-admin>=6.5",
    "google-cloud-firestore>=2.16",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pokeprof = "pokeprof_notebook.cli:main"

[tool.pytest.ini_options]
pythonpath = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/pokeprof_notebook"]
